создан GuiUtils в котором будет храниться логика всех методов для обработки интерфейса, обнавлен метод для добавления модели, логика перенесена в GuiUtils

--- a/src/main/resources/com/cgvsu/fxml/gui.fxml
+++ b/src/main/resources/com/cgvsu/fxml/gui.fxml
@@ -10,7 +10,7 @@
 <AnchorPane fx:id="anchorPane" xmlns:fx="http://javafx.com/fxml" fx:controller="com.cgvsu.GuiController">
     <MenuBar>
         <Menu mnemonicParsing="false" text="File">
-            <MenuItem mnemonicParsing="false" onAction="#onOpenModelMenuItemClick" text="Load Model">
+            <MenuItem mnemonicParsing="false" onAction="#onAddModelMenuItemClick" text="Load Model">
             <accelerator>
                 <KeyCodeCombination alt="UP" control="DOWN" meta="UP" shift="UP" shortcut="UP" code="F"/>
             </accelerator>
