--- a/src/main/resources/com/cgvsu/fxml/gui.fxml
+++ b/src/main/resources/com/cgvsu/fxml/gui.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ListView?>
@@ -11,6 +12,7 @@
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 
@@ -25,22 +27,38 @@
                   <content>
                      <VBox prefHeight="873.0" prefWidth="411.0">
                         <children>
-                           <TitledPane fx:id="selectionModelsPane" animated="false" onDragDetected="#setSelectionModelsPane" text="Модели">
+                           <TitledPane animated="false" text="Модели">
                              <content>
                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
                                        <VBox prefHeight="178.0" prefWidth="400.0">
                                           <children>
                                              <ListView fx:id="modelListView" prefHeight="200.0" prefWidth="200.0" />
-                                             <Button mnemonicParsing="false" onAction="#onAddModelMenuItemClick" text="Добавить модель" />
+                                             <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                                <children>
+                                                   <Button alignment="CENTER" mnemonicParsing="false" onAction="#onAddModelMenuItemClick" text="Добавить модель" />
+                                                   <Button alignment="CENTER" mnemonicParsing="false" onAction="#onDeleteModel" text="Удалить модель" />
+                                                </children>
+                                                <padding>
+                                                   <Insets left="5.0" top="5.0" />
+                                                </padding>
+                                             </HBox>
                                           </children>
                                        </VBox>
                                     </children></AnchorPane>
                              </content>
                            </TitledPane>
-                           <TitledPane animated="false" text="Что-то еще 1">
+                           <TitledPane animated="false" text="Изменить">
                              <content>
-                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <VBox prefHeight="178.0" prefWidth="400.0">
+                                          <children>
+                                             <ListView fx:id="vertexListView" prefHeight="200.0" prefWidth="200.0" />
+                                             <Button mnemonicParsing="false" text="Удалить" />
+                                          </children>
+                                       </VBox>
+                                    </children></AnchorPane>
                              </content>
                            </TitledPane>
                            <TitledPane animated="false" text="Что то еще 2">
