--- a/src/main/resources/com/cgvsu/fxml/gui.fxml
+++ b/src/main/resources/com/cgvsu/fxml/gui.fxml
@@ -8,7 +8,9 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.ToggleButton?>
 <?import javafx.scene.input.KeyCodeCombination?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -55,15 +57,66 @@
                                        <VBox prefHeight="178.0" prefWidth="400.0">
                                           <children>
                                              <ListView fx:id="vertexListView" prefHeight="200.0" prefWidth="200.0" />
-                                             <Button mnemonicParsing="false" text="Удалить" />
+                                             <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                                <children>
+                                                   <ToggleButton fx:id="verticesToggleButton" mnemonicParsing="false" text="Показать вершины" />
+                                                   <Button alignment="CENTER" mnemonicParsing="false" onAction="#onDeleteVerticesButton" text="Удалить вершины" />
+                                                </children>
+                                                <padding>
+                                                   <Insets left="5.0" top="5.0" />
+                                                </padding>
+                                             </HBox>
                                           </children>
                                        </VBox>
                                     </children></AnchorPane>
                              </content>
                            </TitledPane>
-                           <TitledPane animated="false" text="Что то еще 2">
+                           <TitledPane animated="false" text="Камеры">
                              <content>
-                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <VBox maxWidth="398.0" prefHeight="181.0" prefWidth="398.0">
+                                          <children>
+                                             <ListView fx:id="camerasListView" maxWidth="396.0" prefHeight="172.0" prefWidth="396.0">
+                                                <VBox.margin>
+                                                   <Insets left="1.0" />
+                                                </VBox.margin>
+                                             </ListView>
+                                             <VBox fx:id="vBoxCameras">
+                                                <children>
+                                                   <HBox prefHeight="34.0" prefWidth="295.0">
+                                                      <children>
+                                                         <TextField fx:id="camX" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="x">
+                                                            <HBox.margin>
+                                                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                            </HBox.margin>
+                                                         </TextField>
+                                                         <TextField fx:id="camY" layoutX="10.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="y">
+                                                            <HBox.margin>
+                                                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                            </HBox.margin>
+                                                         </TextField>
+                                                         <TextField fx:id="camZ" layoutX="90.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="z">
+                                                            <HBox.margin>
+                                                               <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                            </HBox.margin>
+                                                         </TextField>
+                                                      </children>
+                                                   </HBox>
+                                                   <HBox prefHeight="100.0" prefWidth="200.0" spacing="10.0">
+                                                      <children>
+                                                         <Button alignment="CENTER" mnemonicParsing="false" onAction="#onAddCamera" text="Добавить камеру" />
+                                                         <Button alignment="CENTER" mnemonicParsing="false" onAction="#onDeleteCamera" text="Удалить камеру" />
+                                                      </children>
+                                                      <padding>
+                                                         <Insets left="5.0" top="5.0" />
+                                                      </padding>
+                                                   </HBox>
+                                                </children>
+                                             </VBox>
+                                          </children>
+                                       </VBox>
+                                    </children></AnchorPane>
                              </content>
                            </TitledPane>
                            <TitledPane animated="false" text="Что то еще 3">
@@ -93,32 +146,32 @@
                     <Menu mnemonicParsing="false" text="Управление камерой">
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraForward" text="Вперед">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="UP" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="W" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraBackward" text="Назад">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="DOWN" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraLeft" text="Влево">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="LEFT" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="A" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraRight" text="Вправо">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="RIGHT" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="D" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraUp" text="Вверх">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="W" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="X" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                         <MenuItem mnemonicParsing="false" onAction="#handleCameraDown" text="Вниз">
                             <accelerator>
-                                <KeyCodeCombination alt="UP" code="S" control="UP" meta="UP" shift="UP" shortcut="UP" />
+                                <KeyCodeCombination alt="UP" code="Z" control="UP" meta="UP" shift="UP" shortcut="UP" />
                             </accelerator>
                         </MenuItem>
                     </Menu>
