--- a/src/main/resources/com/cgvsu/fxml/gui.fxml
+++ b/src/main/resources/com/cgvsu/fxml/gui.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.canvas.Canvas?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -29,7 +30,7 @@
                   <content>
                      <VBox prefHeight="873.0" prefWidth="411.0">
                         <children>
-                           <TitledPane animated="false" text="Модели">
+                           <TitledPane animated="false" expanded="false" text="Модели">
                              <content>
                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
@@ -50,7 +51,7 @@
                                     </children></AnchorPane>
                              </content>
                            </TitledPane>
-                           <TitledPane animated="false" text="Изменить">
+                           <TitledPane animated="false" expanded="false" text="Изменить">
                              <content>
                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                     <children>
@@ -120,9 +121,83 @@
                                     </children></AnchorPane>
                              </content>
                            </TitledPane>
-                           <TitledPane animated="false" text="Что то еще 3">
+                           <TitledPane animated="false" prefHeight="302.0" prefWidth="411.0" text="Трансформации">
                              <content>
-                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                    <children>
+                                       <VBox prefHeight="380.0" prefWidth="397.0">
+                                          <children>
+                                             <Label alignment="CENTER" prefHeight="37.0" prefWidth="270.0" text="Масштабировать" />
+                                             <HBox prefHeight="34.0" prefWidth="295.0">
+                                                <children>
+                                                   <TextField fx:id="scaleX" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="x">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="scaleY" layoutX="10.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="y">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="scaleZ" layoutX="90.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="z">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                </children>
+                                             </HBox>
+                                             <Label alignment="CENTER" prefHeight="37.0" prefWidth="266.0" text="Повернуть" />
+                                             <HBox prefHeight="34.0" prefWidth="295.0">
+                                                <children>
+                                                   <TextField fx:id="rotateX" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="x">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="rotateY" layoutX="10.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="y">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="rotateZ" layoutX="90.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="z">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                </children>
+                                             </HBox>
+                                             <Label alignment="CENTER" prefHeight="37.0" prefWidth="270.0" text="Переместить" />
+                                             <HBox prefHeight="34.0" prefWidth="295.0">
+                                                <children>
+                                                   <TextField fx:id="translationX" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="x">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="translationY" layoutX="10.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="y">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                   <TextField fx:id="translationZ" layoutX="90.0" layoutY="10.0" maxWidth="80.0" minWidth="80.0" prefHeight="26.0" prefWidth="80.0" promptText="z">
+                                                      <HBox.margin>
+                                                         <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
+                                                      </HBox.margin>
+                                                   </TextField>
+                                                </children>
+                                             </HBox>
+                                             <HBox prefHeight="100.0" prefWidth="200.0">
+                                                <children>
+                                                   <Button alignment="CENTER" contentDisplay="CENTER" mnemonicParsing="false" onAction="#onApplyTRSButton" prefHeight="25.0" prefWidth="98.0" text="Применить" />
+                                                </children>
+                                                <padding>
+                                                   <Insets left="10.0" top="10.0" />
+                                                </padding>
+                                             </HBox>
+                                          </children>
+                                       </VBox>
+                                    </children></AnchorPane>
                              </content>
                            </TitledPane>
                         </children>
